@@ -1,3 +1,7 @@
+Sun May 31 23:26:36 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* file.c (istrailinggarbage): fixed typo.
+
 Tue May 26 05:39:28 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* include/ruby/ruby.h (FilePathValue): prevent from GC.
